Configuração inicial do projeto Spring Boot - API RESTful